--- a/KokkuEngine/Config/DefaultEngine.ini
+++ b/KokkuEngine/Config/DefaultEngine.ini
@@ -1,6 +1,10 @@
 [URL]
 GameName=KokkuEngine
 
+[Internationalization]
+LocalizationPaths=%GAMEDIR%Content/Localization/Game
+Culture=de-DE
+
 [/Script/Engine.Engine]
 WorldSettingsClassName=/Script/Engine.WorldSettings
 WorldSettingsClassName=/Game/Blueprints/Engine/KokkuWorldSettingsBP.KokkuWorldSettingsBP_C
@@ -797,4 +801,13 @@ bDisableAILogging=False
 bEnableVisualLogRecordingOnStart=0
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="/Script/OnlineSubsystemUtils.IpNetDriver",DriverClassNameFallback="/Script/OnlineSubsystemUtils.IpNetDriver")
 
-
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Engine/Maps/Templates/Template_Default
+EditorStartupMap=/Game/Maps/DefaultMap
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GameDefaultMap=/Engine/Maps/Entry
+GameDefaultMap=/Game/Maps/DefaultMap
+GlobalDefaultServerGameMode=None
