--- a/KokkuEngine/Config/DefaultGame.ini
+++ b/KokkuEngine/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=F53295EC43CA1A3C9CA1EC9AB4719A1F
 
+[Internationalization]
+LocalizationPaths=%GAMEDIR%Content/Localization/Game
+Culture=de-DE
