Base Character Updates + Immigration to UE 4.4

--- a/KokkuEngine/Config/DefaultEngine.ini
+++ b/KokkuEngine/Config/DefaultEngine.ini
@@ -1,10 +1,6 @@
 [URL]
 GameName=KokkuEngine
 
-[Internationalization]
-LocalizationPaths=%GAMEDIR%Content/Localization/Game
-Culture=de-DE
-
 [/Script/Engine.Engine]
 WorldSettingsClassName=/Script/Engine.WorldSettings
 WorldSettingsClassName=/Game/Blueprints/Engine/KokkuWorldSettingsBP.KokkuWorldSettingsBP_C
@@ -801,6 +797,12 @@ bDisableAILogging=False
 bEnableVisualLogRecordingOnStart=0
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="/Script/OnlineSubsystemUtils.IpNetDriver",DriverClassNameFallback="/Script/OnlineSubsystemUtils.IpNetDriver")
 
+[/Script/Paper2D.PaperRuntimeSettings]
+DefaultPixelsPerUnrealUnit=1.000000
+bEnableSpriteAtlasGroups=True
+bEnableTileMapEditing=True
+bEnableTerrainSplineEditing=True
+
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Engine/Maps/Templates/Template_Default
 EditorStartupMap=/Game/Maps/DefaultMap
@@ -808,16 +810,12 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/Engine/KokkuGameInstanceBP.KokkuGameInstanceBP_C
 GameDefaultMap=/Engine/Maps/Entry
 GameDefaultMap=/Game/Maps/DefaultMap
 GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultGameMode=/Script/KokkuEngine.KokkuGameModeBase
 GlobalDefaultServerGameMode=None
-
-[/Script/Paper2D.PaperRuntimeSettings]
-DefaultPixelsPerUnrealUnit=1.000000
-bEnableSpriteAtlasGroups=True
-bEnableTileMapEditing=True
-bEnableTerrainSplineEditing=True
 
 
