--- a/KokkuEngine/Config/DefaultInput.ini
+++ b/KokkuEngine/Config/DefaultInput.ini
@@ -1,11 +1,5 @@
 
 [/Script/Engine.InputSettings]
--AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_RightY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="MouseX",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
--AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
 +AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 +AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 +AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
@@ -13,14 +7,21 @@
 +AxisConfig=(AxisKeyName="MouseX",AxisProperties=(DeadZone=0.000000,Sensitivity=0.070000,Exponent=1.000000,bInvert=False))
 +AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.000000,Sensitivity=0.070000,Exponent=1.000000,bInvert=False))
 bUseMouseForTouch=False
-+ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False)
-+ActionMappings=(ActionName="Run",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False)
-+ActionMappings=(ActionName="Duck",Key=S,bShift=False,bCtrl=False,bAlt=False)
-+ActionMappings=(ActionName="Duck",Key=Down,bShift=False,bCtrl=False,bAlt=False)
-+ActionMappings=(ActionName="Run",Key=RightShift,bShift=False,bCtrl=False,bAlt=False)
++ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Run",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Duck",Key=S,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Duck",Key=Down,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Run",Key=RightShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Run",Key=Gamepad_FaceButton_Top,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Duck",Key=Gamepad_DPad_Down,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Duck",Key=Gamepad_LeftStick_Down,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="WalkLeftRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="WalkLeftRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="WalkLeftRight",Key=Left,Scale=-1.000000)
 +AxisMappings=(AxisName="WalkLeftRight",Key=Right,Scale=1.000000)
++AxisMappings=(AxisName="WalkLeftRight",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="WalkLeftRight",Key=Gamepad_DPad_Left,Scale=-1.000000)
++AxisMappings=(AxisName="WalkLeftRight",Key=Gamepad_DPad_Right,Scale=1.000000)
 
 
